--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-stripe-checkout": "^2.6.3",
     "reactstrap": "^8.7.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
