--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "ionicons": "^5.2.3",
     "mdbreact": "^4.27.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-icon": "^1.0.0",
     "react-icons": "^3.11.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-stripe-checkout": "^2.6.3",
     "reactstrap": "^8.7.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "store": "^2.0.12",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
