--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "formic": "0.0.10",
+    "formik": "^2.2.5",
     "ionicons": "^5.2.3",
     "mdbreact": "^4.27.0",
     "react": "^17.0.1",
