--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-stripe-checkout": "^2.6.3",
+    "react-validation": "^3.0.7",
     "reactstrap": "^8.7.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
@@ -28,6 +29,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
     "store": "^2.0.12",
+    "validator": "^13.5.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
